--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/ProjectPickerDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/ProjectPickerDialog.xaml
@@ -14,6 +14,7 @@
                          Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
 
     <platformUi:DialogWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <Style TargetType="Label">
             <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
         </Style>
