--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddAssetDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddAssetDialog.xaml
@@ -1,30 +1,29 @@
 <platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddAssetDialog"
-                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         mc:Ignorable="d"
-                         Title="Add Asset"
-                         Width="500" Height="350"
-                         WindowStartupLocation="CenterOwner"
-                         ResizeMode="NoResize"
-                         ShowInTaskbar="False"
-                         HasMaximizeButton="False"
-                         HasMinimizeButton="False"
-                         Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                        xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        mc:Ignorable="d"
+                        Title="Add Asset"
+                        Width="500" Height="350"
+                        WindowStartupLocation="CenterOwner"
+                        ResizeMode="NoResize"
+                        ShowInTaskbar="False"
+                        HasMaximizeButton="False"
+                        HasMinimizeButton="False"
+                        Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
 
     <platformUi:DialogWindow.Resources>
-        <Style TargetType="Label">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/CodingWithCalvin.VsixManifestDesigner;component/Themes/ThemeResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </platformUi:DialogWindow.Resources>
 
-    <Grid Margin="15">
+    <Grid Margin="{StaticResource DialogPadding}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -42,12 +41,12 @@
 
         <!-- Type -->
         <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" />
-        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="0,0,0,10"
+        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="TypeComboBox_SelectionChanged" />
 
         <!-- Source -->
         <Label Grid.Row="1" Grid.Column="0" Content="Source:" VerticalAlignment="Center" />
-        <ComboBox Grid.Row="1" Grid.Column="1" x:Name="SourceComboBox" Margin="0,0,0,10"
+        <ComboBox Grid.Row="1" Grid.Column="1" x:Name="SourceComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="SourceComboBox_SelectionChanged">
             <ComboBoxItem Content="This Project" Tag="CurrentProject" />
             <ComboBoxItem Content="Project in Solution" Tag="Project" />
@@ -56,7 +55,7 @@
 
         <!-- Project (shown when Source is Project) -->
         <Label Grid.Row="2" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" />
-        <Grid Grid.Row="2" Grid.Column="1" x:Name="ProjectGrid" Margin="0,0,0,10">
+        <Grid Grid.Row="2" Grid.Column="1" x:Name="ProjectGrid" Margin="{StaticResource FormFieldMargin}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -67,7 +66,7 @@
 
         <!-- Path (shown when Source is File) -->
         <Label Grid.Row="3" Grid.Column="0" x:Name="PathLabel" Content="Path:" VerticalAlignment="Center" Visibility="Collapsed" />
-        <Grid Grid.Row="3" Grid.Column="1" x:Name="PathGrid" Margin="0,0,0,10" Visibility="Collapsed">
+        <Grid Grid.Row="3" Grid.Column="1" x:Name="PathGrid" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -78,17 +77,17 @@
 
         <!-- VSIX Sub Path -->
         <Label Grid.Row="4" Grid.Column="0" Content="VSIX SubPath:" VerticalAlignment="Center" />
-        <TextBox Grid.Row="4" Grid.Column="1" x:Name="VsixSubPathTextBox" Margin="0,0,0,10" />
+        <TextBox Grid.Row="4" Grid.Column="1" x:Name="VsixSubPathTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Addressable -->
         <Label Grid.Row="5" Grid.Column="0" Content="Addressable:" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="5" Grid.Column="1" x:Name="AddressableCheckBox" Margin="0,0,0,10" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="5" Grid.Column="1" x:Name="AddressableCheckBox" Margin="{StaticResource FormFieldMargin}" VerticalAlignment="Center" />
 
         <!-- Warning for SDK-style projects without VsixSdk when selecting template assets -->
         <Border Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" x:Name="WarningBorder"
-                Background="#FFF3CD" BorderBrush="#FFCC00" BorderThickness="1" CornerRadius="3"
-                Padding="10" Margin="0,0,0,10" Visibility="Collapsed">
-            <TextBlock x:Name="WarningText" TextWrapping="Wrap" Foreground="#856404">
+                Style="{StaticResource WarningBoxStyle}"
+                Visibility="Collapsed">
+            <TextBlock x:Name="WarningText" Style="{StaticResource WarningBoxTextStyle}">
                 Warning: SDK-style projects require CodingWithCalvin.VsixSdk to properly handle template assets.
             </TextBlock>
         </Border>
@@ -96,8 +95,8 @@
         <!-- Buttons -->
         <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
                     Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" Width="75" Margin="0,0,10,0" IsDefault="True" Click="OkButton_Click" />
-            <Button Content="Cancel" Width="75" IsCancel="True" />
+            <Button Content="OK" Margin="{StaticResource ButtonSpacing}" IsDefault="True" Click="OkButton_Click" />
+            <Button Content="Cancel" IsCancel="True" />
         </StackPanel>
     </Grid>
 </platformUi:DialogWindow>
