--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddContentDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddContentDialog.xaml
@@ -1,30 +1,29 @@
 <platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddContentDialog"
-                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         mc:Ignorable="d"
-                         Title="Add Content"
-                         Width="450" Height="200"
-                         WindowStartupLocation="CenterOwner"
-                         ResizeMode="NoResize"
-                         ShowInTaskbar="False"
-                         HasMaximizeButton="False"
-                         HasMinimizeButton="False"
-                         Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                        xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        mc:Ignorable="d"
+                        Title="Add Content"
+                        Width="450" Height="200"
+                        WindowStartupLocation="CenterOwner"
+                        ResizeMode="NoResize"
+                        ShowInTaskbar="False"
+                        HasMaximizeButton="False"
+                        HasMinimizeButton="False"
+                        Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
 
     <platformUi:DialogWindow.Resources>
-        <Style TargetType="Label">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/CodingWithCalvin.VsixManifestDesigner;component/Themes/ThemeResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </platformUi:DialogWindow.Resources>
 
-    <Grid Margin="15">
+    <Grid Margin="{StaticResource DialogPadding}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -37,11 +36,11 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Content="Type:" VerticalAlignment="Center" />
-        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="0,0,0,10"
+        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="TypeComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectedItem="{Binding Type, Mode=TwoWay}" />
 
         <Label Grid.Row="1" Grid.Column="0" Content="Path:" VerticalAlignment="Center" />
-        <Grid Grid.Row="1" Grid.Column="1" Margin="0,0,0,10">
+        <Grid Grid.Row="1" Grid.Column="1" Margin="{StaticResource FormFieldMargin}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -52,8 +51,8 @@
 
         <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
                     Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" Width="75" Margin="0,0,10,0" IsDefault="True" Click="OkButton_Click" />
-            <Button Content="Cancel" Width="75" IsCancel="True" />
+            <Button Content="OK" Margin="{StaticResource ButtonSpacing}" IsDefault="True" Click="OkButton_Click" />
+            <Button Content="Cancel" IsCancel="True" />
         </StackPanel>
     </Grid>
 </platformUi:DialogWindow>
