--- a/src/CodingWithCalvin.VsixManifestDesigner/Views/AssetsView.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Views/AssetsView.xaml
@@ -12,22 +12,21 @@
              Foreground="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}">
 
     <UserControl.Resources>
-        <Style TargetType="Label">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/CodingWithCalvin.VsixManifestDesigner;component/Themes/ThemeResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="10">
+    <Grid Margin="{StaticResource PanelMargin}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Assets" FontWeight="Bold" FontSize="14" Margin="0,0,0,10" />
+        <TextBlock Grid.Row="0" Text="Assets" Style="{StaticResource SectionHeaderStyle}" />
 
         <DataGrid Grid.Row="1"
                   x:Name="AssetsGrid"
@@ -44,10 +43,10 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-            <Button Content="Add" Width="75" Margin="0,0,5,0" Click="AddAsset_Click" />
-            <Button Content="Edit" Width="75" Margin="0,0,5,0" Click="EditAsset_Click" />
-            <Button Content="Remove" Width="75" Click="RemoveAsset_Click" />
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left" Margin="{StaticResource ButtonPanelMargin}">
+            <Button Content="Add" Margin="{StaticResource ButtonSpacing}" Click="AddAsset_Click" />
+            <Button Content="Edit" Margin="{StaticResource ButtonSpacing}" Click="EditAsset_Click" />
+            <Button Content="Remove" Click="RemoveAsset_Click" />
         </StackPanel>
     </Grid>
 </UserControl>
