--- a/src/CodingWithCalvin.VsixManifestDesigner/Views/ContentView.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Views/ContentView.xaml
@@ -12,15 +12,14 @@
              Foreground="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}">
 
     <UserControl.Resources>
-        <Style TargetType="Label">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/CodingWithCalvin.VsixManifestDesigner;component/Themes/ThemeResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="10">
+    <Grid Margin="{StaticResource PanelMargin}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -28,9 +27,9 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Content" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" />
+        <TextBlock Grid.Row="0" Text="Content" Style="{StaticResource SectionHeaderStyle}" Margin="0,0,0,5" />
 
-        <TextBlock Grid.Row="1" TextWrapping="Wrap" Margin="0,0,0,10"
+        <TextBlock Grid.Row="1" TextWrapping="Wrap" Margin="{StaticResource FormFieldMargin}"
                    Text="Define paths to project templates and item templates that should be included in this extension." />
 
         <DataGrid Grid.Row="2"
@@ -47,10 +46,10 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-            <Button Content="Add" Width="75" Margin="0,0,5,0" Click="AddContent_Click" />
-            <Button Content="Edit" Width="75" Margin="0,0,5,0" Click="EditContent_Click" />
-            <Button Content="Remove" Width="75" Click="RemoveContent_Click" />
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left" Margin="{StaticResource ButtonPanelMargin}">
+            <Button Content="Add" Margin="{StaticResource ButtonSpacing}" Click="AddContent_Click" />
+            <Button Content="Edit" Margin="{StaticResource ButtonSpacing}" Click="EditContent_Click" />
+            <Button Content="Remove" Click="RemoveContent_Click" />
         </StackPanel>
     </Grid>
 </UserControl>
